# HeiStream

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PartitionInfo.fbs  PartitionInfo_generated.h  README.md  compile.sh
app/: balance_configuration.h  configuration.h  evaluateedgepartition.cpp  parse_parameters.h  streamedgepartition.cpp  streampartition.cpp
lib/: definitions.h
lib/algorithms/: ADDING_ALGORITHM.md
lib/algorithms/bootstrap/: register_builtin_algorithms.cpp  register_builtin_algorithms.h
lib/algorithms/edge_partitioning/: edge_partitioning_algorithm.cpp  edge_partitioning_algorithm.h
lib/algorithms/edge_partitioning/evaluation/: edge_partitioning_evaluator.cpp  edge_partitioning_evaluator.h
lib/algorithms/edge_partitioning/execution/: edge_execution.cpp  edge_execution.h
lib/algorithms/edge_partitioning/factory/: edge_partitioning_algorithm_factory.cpp  edge_partitioning_algorithm_factory.h
lib/algorithms/edge_partitioning/mode/: edge_partitioning_mode_resolver.cpp  edge_partitioning_mode_resolver.h
lib/algorithms/edge_partitioning/model/: edge_batch_model_builder.cpp  edge_batch_model_builder.h
lib/algorithms/edge_partitioning/reporting/: edge_partitioning_reporter.cpp  edge_partitioning_reporter.h
lib/algorithms/edge_partitioning/scheduler/: edge_partitioning_scheduler.cpp  edge_partitioning_scheduler.h
lib/algorithms/edge_partitioning/setup/: edge_partitioning_setup.cpp  edge_partitioning_setup.h
lib/algorithms/node_partitioning/: node_partitioning_algorithm.cpp  node_partitioning_algorithm.h
lib/algorithms/node_partitioning/evaluation/: node_partitioning_evaluator.cpp  node_partitioning_evaluator.h
lib/algorithms/node_partitioning/execution/: batch_id_manager.h  node_execution_common.cpp  node_execution_direct.cpp  node_execution_internal.h  node_execution_no_buffer.cpp  node_execution_priority_buffer_parallel.cpp  node_execution_priority_buffer_sequential.cpp
lib/algorithms/node_partitioning/factory/: node_partitioning_algorithm_factory.cpp  node_partitioning_algorithm_factory.h
lib/algorithms/node_partitioning/mode/: node_partitioning_mode_prepare.cpp  node_partitioning_mode_prepare.h  node_partitioning_mode_resolver.cpp  node_partitioning_mode_resolver.h
lib/algorithms/node_partitioning/model/: node_batch_model_builder.cpp  node_batch_model_builder.h
lib/algorithms/node_partitioning/reporting/: node_partitioning_reporter.cpp  node_partitioning_reporter.h
lib/algorithms/node_partitioning/scheduler/: node_partitioning_scheduler.cpp  node_partitioning_scheduler.h
lib/algorithms/node_partitioning/setup/: node_partitioning_setup.cpp  node_partitioning_setup.h
lib/cli/: configuration.h  parse_parameters.h  stream_parameter_apply.h
lib/core/context/: stream_context.h
lib/core/factory/: algorithm_registry.cpp  algorithm_registry.h
lib/core/interfaces/: algorithm_evaluator.h  algorithm_reporter.h  algorithm_scheduler.h  algorithm_setup.h  stream_algorithm.h
lib/core/pipeline/: algorithm_pipeline.cpp  algorithm_pipeline.h  stream_engine.cpp  stream_engine.h
lib/core/setup/: stream_run_setup.cpp  stream_run_setup.h
lib/core/timing/: scoped_stage_timer.h  stream_timing_recorder.h
lib/data_structure/: buffer.h  buffered_map.h  flow_graph.h  graph_access.h  graph_hierarchy.cpp  graph_hierarchy.h  union_find.h
lib/data_structure/compression_vectors/: BatchRunLengthCompression.h  CompressionDataStructure.h  RunLengthCompressionVector.h
lib/data_structure/priority_queues/: bucket_pq.h  map_storage.h  maxNodeHeap.h  pq_item.h  pq_storage_interface.h  priority_queue_interface.h  vector_storage.h
lib/graph/algorithms/: push_relabel.cpp  push_relabel.h  strongly_connected_components.cpp  strongly_connected_components.h  topological_sort.cpp  topological_sort.h
lib/io/: edge_stream_reader.cpp  edge_stream_reader.h  graph_io.cpp  graph_io.h  graph_io_stream.cpp  graph_io_stream.h  node_stream_reader.cpp  node_stream_reader.h  stream_reader.cpp  stream_reader.h
lib/io/output/: flatbuffer_log_writer.cpp  flatbuffer_log_writer.h  partition_output_writer.cpp  partition_output_writer.h
lib/partition/: balance_configuration.h  graph_partitioner.cpp  graph_partitioner.h  partition_config.h
lib/partition/assignment/: edge_stream_assign.cpp  edge_stream_assign.h  node_fennel_assign.h  node_stream_assign.cpp  node_stream_assign.h
lib/partition/coarsening/: coarsening.cpp  coarsening.h  coarsening_configurator.h  contraction.cpp  contraction.h
lib/partition/coarsening/clustering/: node_ordering.cpp  node_ordering.h  size_constraint_label_propagation.cpp  size_constraint_label_propagation.h
lib/partition/coarsening/edge_rating/: edge_ratings.cpp  edge_ratings.h
lib/partition/coarsening/matching/: compare_degrees.h  matching.cpp  matching.h  random_matching.cpp  random_matching.h
lib/partition/coarsening/stop_rules/: stop_rules.h
lib/partition/heuristics/: fennel_scoring.h
lib/partition/initial_partitioning/: init_fennel.cpp  init_fennel.h  initial_partitioner.cpp  initial_partitioner.h  initial_partitioning.cpp  initial_partitioning.h
lib/partition/metrics/: edge_partitioning_quality_eval.cpp  edge_partitioning_quality_eval.h  node_partitioning_quality_eval.cpp  node_partitioning_quality_eval.h
lib/partition/model/: model_graph_ops.cpp  model_graph_ops.h  model_partition_mapper.cpp  model_partition_mapper.h
lib/partition/setup/: partition_stream_common_setup.h
lib/partition/stages/: batch_partition_execution.cpp  batch_partition_execution.h  stream_partition_stages.cpp  stream_partition_stages.h
lib/partition/state/: edge_partitioner_pass_state.h  node_partitioner_pass_state.h
lib/partition/uncoarsening/: uncoarsening.cpp  uncoarsening.h
lib/tools/: flat_buffer_writer.h  graph_extractor.cpp  graph_extractor.h  graph_partition_assertions.h  macros_assertions.h  macros_common.h  misc.cpp  misc.h  partition_snapshooter.cpp  partition_snapshooter.h  quality_metrics.cpp  quality_metrics.h  random_functions.cpp  random_functions.h  stream_util.cpp  stream_util.h  timer.h
(+20 files in other folders)
